# codex-runner

./: .gitignore  README.md  pyproject.toml
codex_runner/: checks.py  cli.py  config.py  runner.py  tmux.py
tests/: test_checks.py  test_config.py  test_integration.py  test_interactive_runner.py  test_prompts.py  test_tmux.py
